--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Léonor De Castro | Portfolio IT</title>
+
+  <!-- Icônes IT (Font Awesome) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
   <style>
 :root{
-  --bg1:#0b1020;
-  --bg2:#101b3a;
-  --card: rgba(255,255,255,.08);
-  --txt: rgba(255,255,255,.92);
-  --muted: rgba(255,255,255,.72);
-  --accent1:#8b5cf6;
-  --accent2:#22d3ee;
-  --border: rgba(255,255,255,.14);
+  --bg1:#050816;
+  --bg2:#0b1230;
+  --card: rgba(255,255,255,.05);
+  --txt: #f5f7ff;
+  --muted: rgba(255,255,255,.65);
+  --accent1:#7c3aed;
+  --accent2:#06b6d4;
+  --neon:#22d3ee;
+  --border: rgba(255,255,255,.15);
 }
 
 *{box-sizing:border-box}
@@ -23,106 +28,192 @@ body{
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
   color:var(--txt);
   background:
-    radial-gradient(1200px 700px at 10% 10%, rgba(139,92,246,.35), transparent 60%),
-    radial-gradient(900px 600px at 90% 20%, rgba(34,211,238,.25), transparent 60%),
+    radial-gradient(900px 600px at 20% 10%, rgba(124,58,237,.25), transparent 60%),
+    radial-gradient(800px 500px at 90% 20%, rgba(6,182,212,.20), transparent 60%),
     linear-gradient(180deg,var(--bg1),var(--bg2));
   min-height:100vh;
+  position:relative;
 }
 
-.wrap{max-width:980px; margin:0 auto; padding:32px 18px 64px}
+/* grille tech discrète */
+body::before{
+  content:"";
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  opacity:.15;
+  background-image:
+    linear-gradient(to right, rgba(255,255,255,.05) 1px, transparent 1px),
+    linear-gradient(to bottom, rgba(255,255,255,.05) 1px, transparent 1px);
+  background-size: 40px 40px;
+}
+
+.wrap{max-width:1050px;margin:0 auto;padding:40px 20px 80px}
 
 .top{
-  display:flex; gap:16px; align-items:center; justify-content:space-between; flex-wrap:wrap;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
 }
 
 .badge{
-  padding:10px 14px;
-  border:1px solid var(--border);
+  padding:8px 16px;
   border-radius:999px;
   background:rgba(255,255,255,.06);
-  color:var(--muted);
-  font-size:14px;
+  border:1px solid var(--border);
+  font-size:13px;
 }
 
-.hero{margin-top:26px}
+.lang-switch{
+  display:flex;
+  gap:10px;
+}
 
-h1{font-size:38px; line-height:1.1; margin:0}
+.lang-btn{
+  padding:6px 14px;
+  border-radius:999px;
+  border:1px solid var(--border);
+  cursor:pointer;
+  font-size:13px;
+  transition:.2s;
+  user-select:none;
+}
 
-.subtitle{margin:10px 0 0; color:var(--muted); font-size:16px; max-width:70ch}
+.lang-btn:hover{
+  background:linear-gradient(90deg,var(--accent1),var(--accent2));
+  color:#000;
+}
 
-.cta{margin-top:18px; display:flex; gap:10px; flex-wrap:wrap}
+h1{
+  font-size:42px;
+  margin:30px 0 10px;
+  background:linear-gradient(90deg,var(--accent1),var(--accent2));
+  -webkit-background-clip:text;
+  -webkit-text-fill-color:transparent;
+}
 
-a.btn{
+.subtitle{
+  color:var(--muted);
+  max-width:700px;
+  font-size:17px;
+}
+
+.cta{
+  margin-top:25px;
+  display:flex;
+  gap:15px;
+  flex-wrap:wrap;
+}
+
+.btn{
+  padding:12px 18px;
+  border-radius:14px;
+  border:1px solid var(--border);
   text-decoration:none;
   color:var(--txt);
   font-weight:600;
-  padding:12px 14px;
-  border-radius:12px;
-  border:1px solid var(--border);
-  background:rgba(255,255,255,.06);
+  transition:.2s;
+  display:inline-flex;
+  align-items:center;
+  gap:8px;
 }
 
-a.btn.primary{
+.btn.primary{
+  background:linear-gradient(90deg,var(--accent1),var(--accent2));
+  color:#000;
   border:none;
-  background: linear-gradient(90deg, var(--accent1), var(--accent2));
-  color:#061018;
+}
+
+.btn:hover{
+  transform:translateY(-2px);
+}
+
+.section{margin-top:70px}
+
+.section h2{
+  font-size:22px;
+  margin-bottom:20px;
+  border-left:4px solid var(--accent2);
+  padding-left:12px;
 }
 
 .grid{
   display:grid;
   grid-template-columns:repeat(12,1fr);
-  gap:14px;
-  margin-top:28px;
+  gap:20px;
 }
 
 .card{
-  grid-column: span 6;
-  padding:16px;
-  border:1px solid var(--border);
+  grid-column:span 6;
+  padding:22px;
   border-radius:18px;
-  background: var(--card);
-  backdrop-filter: blur(10px);
+  background:var(--card);
+  border:1px solid var(--border);
+  backdrop-filter:blur(10px);
+  transition:.2s;
 }
 
-.card h3{margin:0 0 8px; font-size:16px}
-.card p{margin:0; color:var(--muted); font-size:14px; line-height:1.5}
-
-.section{margin-top:30px}
-.section h2{font-size:18px; margin:0 0 12px}
-
-ul{margin:0; padding-left:18px; color:var(--muted)}
-
-/* ✅ Projets : 2 cartes larges */
-.projects .card{ grid-column: span 6; }
-.projects .grid{ justify-items: stretch; }
-
-.footer{margin-top:40px; color:var(--muted); font-size:13px}
-
-@media (max-width:760px){
-  .card{ grid-column: span 12; }
-  .projects .card{ grid-column: span 12; }
-  h1{ font-size:32px; }
+.card:hover{
+  border-color:var(--neon);
+  transform:translateY(-3px);
 }
-</style>
 
+.card h3{
+  margin:0 0 10px;
+  font-size:17px;
+  color:var(--neon);
+  display:flex;
+  align-items:center;
+  gap:10px;
+}
+
+/* icônes fines */
+.card h3 i{
+  font-size:16px;
+  opacity:.9;
+}
+
+.card p{
+  margin:0;
+  color:var(--muted);
+}
+
+.footer{
+  margin-top:60px;
+  font-size:13px;
+  color:var(--muted);
+}
+
+@media(max-width:760px){
+  .card{grid-column:span 12;}
+  h1{font-size:32px;}
+}
+  </style>
 </head>
+
 <body>
   <div class="wrap">
     <div class="top">
       <div class="badge">Portfolio IT • Braga / Portugal</div>
-      <div class="badge">FR • PT</div>
+
+      <div class="lang-switch">
+        <div class="lang-btn">🇫🇷 FR</div>
+        <div class="lang-btn">🇵🇹 PT</div>
+      </div>
     </div>
 
     <div class="hero">
       <h1>Léonor De Castro</h1>
-      <p class=".subtitle">
+      <p class="subtitle">
         Technicienne Support Informatique (en formation) — préparation CompTIA A+.
         J’organise ici mes labs (FORMIP), mes dépannages et mes projets pratiques.
       </p>
+
       <div class="cta">
         <a class="btn primary" href="#projets">Voir mes projets</a>
         <a class="btn" href="https://www.linkedin.com/" target="_blank" rel="noreferrer">LinkedIn</a>
         <a class="btn" href="https://github.com/" target="_blank" rel="noreferrer">GitHub</a>
+        <a class="btn" href="cv-leonor.pdf" download><i class="fa-solid fa-file-arrow-down"></i> Télécharger CV</a>
       </div>
     </div>
 
@@ -130,19 +221,22 @@ ul{margin:0; padding-left:18px; color:var(--muted)}
       <h2>Compétences</h2>
       <div class="grid">
         <div class="card">
-          <h3>🖥️ Systèmes</h3>
+          <h3><i class="fa-solid fa-laptop-code"></i> Systèmes</h3>
           <p>Installation Windows, dépannage, optimisation, drivers, outils d’administration.</p>
         </div>
+
         <div class="card">
-          <h3>🌐 Réseaux</h3>
+          <h3><i class="fa-solid fa-network-wired"></i> Réseaux</h3>
           <p>TCP/IP, DHCP/DNS, ping/tracert, partage, Wi-Fi, diagnostic de connectivité.</p>
         </div>
+
         <div class="card">
-          <h3>🔧 Matériel</h3>
+          <h3><i class="fa-solid fa-microchip"></i> Matériel</h3>
           <p>Diagnostic PC, RAM/SSD, périphériques, BIOS/UEFI, maintenance.</p>
         </div>
+
         <div class="card">
-          <h3>🧪 Labs & Documentation</h3>
+          <h3><i class="fa-solid fa-code"></i> Labs & Documentation</h3>
           <p>VM (VirtualBox), procédures pas à pas, comptes-rendus techniques.</p>
         </div>
       </div>
@@ -152,14 +246,23 @@ ul{margin:0; padding-left:18px; color:var(--muted)}
       <h2>Projets / Labs</h2>
       <div class="grid">
         <div class="card">
-          <h3>Labs FORMIP</h3>
+          <h3><i class="fa-solid fa-book"></i> Labs FORMIP</h3>
           <p>TP reformulés + captures + compétences démontrées.</p>
-          <p><a class="btn" href="https://github.com/leonordecastro-it/IT-Portfolio" target="_blank" rel="noreferrer">Voir</a></p>
+          <p style="margin-top:12px;">
+            <a class="btn" href="https://github.com/leonordecastro-it/IT-Portfolio" target="_blank" rel="noreferrer">
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> Voir
+            </a>
+          </p>
         </div>
+
         <div class="card">
-          <h3>Interventions réelles</h3>
+          <h3><i class="fa-solid fa-screwdriver-wrench"></i> Interventions réelles</h3>
           <p>Comptes-rendus “support utilisateur” (sans données personnelles).</p>
-          <p><a class="btn" href="https://github.com/leonordecastro-it/IT-Portfolio" target="_blank" rel="noreferrer">Voir</a></p>
+          <p style="margin-top:12px;">
+            <a class="btn" href="https://github.com/leonordecastro-it/IT-Portfolio" target="_blank" rel="noreferrer">
+              <i class="fa-solid fa-arrow-up-right-from-square"></i> Voir
+            </a>
+          </p>
         </div>
       </div>
     </div>
@@ -176,6 +279,8 @@ ul{margin:0; padding-left:18px; color:var(--muted)}
     <div class="footer">© <span id="y"></span> — Portfolio</div>
   </div>
 
-  <script>document.getElementById("y").textContent = new Date().getFullYear()</script>
+  <script>
+    document.getElementById("y").textContent = new Date().getFullYear();
+  </script>
 </body>
 </html>
