--- a/index.html
+++ b/index.html
@@ -27,28 +27,61 @@ body{
   margin:0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
   color:var(--txt);
-  background:
-    radial-gradient(900px 600px at 20% 10%, rgba(124,58,237,.25), transparent 60%),
-    radial-gradient(800px 500px at 90% 20%, rgba(6,182,212,.20), transparent 60%),
-    linear-gradient(180deg,var(--bg1),var(--bg2));
+
+  /* ✅ PHOTO EN FOND */
+  background: url("bg-cyber.png") no-repeat center center fixed;
+  background-size: cover;
+
   min-height:100vh;
   position:relative;
+  overflow-x:hidden;
 }
 
-/* grille tech discrète */
+/* ✅ Overlay sombre + teinte néon pour lisibilité */
 body::before{
   content:"";
   position:fixed;
   inset:0;
+  z-index:-2;
   pointer-events:none;
-  opacity:.15;
-  background-image:
-    linear-gradient(to right, rgba(255,255,255,.05) 1px, transparent 1px),
-    linear-gradient(to bottom, rgba(255,255,255,.05) 1px, transparent 1px);
-  background-size: 40px 40px;
+  background:
+    linear-gradient(rgba(6,8,21,.84), rgba(9,15,42,.90)),
+    radial-gradient(circle at 20% 20%, rgba(124,58,237,.16), transparent 55%),
+    radial-gradient(circle at 80% 30%, rgba(6,182,212,.12), transparent 55%);
+}
+
+/* ✅ Glow global (respiration) */
+body::after{
+  content:"";
+  position:fixed;
+  inset:-30px;
+  z-index:-1;
+  pointer-events:none;
+  opacity:.10;
+  background:
+    radial-gradient(circle at 70% 52%, rgba(34,211,238,.24), transparent 58%),
+    radial-gradient(circle at 35% 40%, rgba(124,58,237,.18), transparent 60%);
+  filter: blur(18px);
+  animation: glowPulse 3.6s ease-in-out infinite;
+}
+
+@keyframes glowPulse{
+  0%{ opacity:.06; transform:scale(1); }
+  50%{ opacity:.18; transform:scale(1.02); }
+  100%{ opacity:.08; transform:scale(1); }
 }
 
 .wrap{max-width:1050px;margin:0 auto;padding:40px 20px 80px}
+
+/* ✅ Révélation du contenu après “allumage néon” */
+.wrap{
+  animation: contentReveal 1.2s ease 0.55s both;
+}
+
+@keyframes contentReveal{
+  from{ opacity:0; transform: translateY(10px); filter: blur(2px); }
+  to  { opacity:1; transform: translateY(0); filter: blur(0); }
+}
 
 .top{
   display:flex;
@@ -156,6 +189,10 @@ h1{
 .card:hover{
   border-color:var(--neon);
   transform:translateY(-3px);
+  /* ✅ glow plus “cinéma” */
+  box-shadow:
+    0 0 0 3px rgba(34,211,238,.10),
+    0 18px 60px rgba(0,0,0,.45);
 }
 
 .card h3{
@@ -188,10 +225,190 @@ h1{
   .card{grid-column:span 12;}
   h1{font-size:32px;}
 }
+
+/* =========================
+   🔥 FX CINÉMA (GLOBAL + LOCAL)
+   - flicker / scan / spot laptop / reflet
+========================= */
+
+.cyber-fx{
+  position:fixed;
+  inset:0;
+  pointer-events:none;
+  z-index:999;
+  opacity:0;
+  animation: fxIn 1.6s ease forwards;
+}
+
+/* scanline global */
+.cyber-fx::before{
+  content:"";
+  position:absolute;
+  left:-10%;
+  right:-10%;
+  top:-30%;
+  height:28%;
+  background: linear-gradient(
+    to bottom,
+    transparent,
+    rgba(34,211,238,.18),
+    rgba(34,211,238,.05),
+    transparent
+  );
+  filter: blur(2px);
+  animation: scan 1.7s ease .20s 1;
+}
+
+/* grain global */
+.cyber-fx::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  background:
+    repeating-linear-gradient(
+      to bottom,
+      rgba(255,255,255,.04) 0px,
+      rgba(255,255,255,.04) 1px,
+      transparent 2px,
+      transparent 7px
+    );
+  opacity:.10;
+  mix-blend-mode: overlay;
+  animation: flickerSoft 1.6s ease .05s 1;
+}
+
+/* Spot local sur la zone laptop (centre-droit) */
+.neon-spot{
+  position:fixed;
+  width: 720px;
+  height: 440px;
+
+  /* ✅ Ajustable si besoin */
+  left: 66%;
+  top: 42%;
+
+  transform: translate(-50%, -50%);
+  pointer-events:none;
+  z-index:5;
+  opacity:0;
+  animation: neonStartup 1.9s ease forwards;
+}
+
+.neon-spot::before{
+  content:"";
+  position:absolute;
+  inset:-50px;
+  border-radius: 34px;
+  background:
+    radial-gradient(circle at 55% 55%, rgba(34,211,238,.38), transparent 55%),
+    radial-gradient(circle at 40% 40%, rgba(124,58,237,.25), transparent 62%);
+  filter: blur(18px);
+  opacity:0;
+  animation: glowLocal 2.4s ease forwards;
+}
+
+/* bruit + scanlines local */
+.neon-spot::after{
+  content:"";
+  position:absolute;
+  inset:0;
+  border-radius: 24px;
+  background:
+    repeating-linear-gradient(
+      to bottom,
+      rgba(255,255,255,.10) 0px,
+      rgba(255,255,255,.10) 1px,
+      transparent 2px,
+      transparent 7px
+    );
+  mix-blend-mode: screen;
+  opacity:0;
+  animation: localNoise 1.9s ease forwards;
+}
+
+/* reflet au sol sous le laptop */
+.neon-reflect{
+  position:fixed;
+  width: 900px;
+  height: 320px;
+
+  left: 66%;
+  top: 72%;
+
+  transform: translate(-50%, -50%);
+  pointer-events:none;
+  z-index:4;
+  opacity:0;
+  background:
+    radial-gradient(ellipse at 50% 30%, rgba(34,211,238,.22), transparent 60%),
+    radial-gradient(ellipse at 35% 40%, rgba(124,58,237,.14), transparent 70%);
+  filter: blur(22px);
+  animation: reflectIn 2.2s ease .15s forwards;
+}
+
+/* animations */
+@keyframes fxIn{
+  0%{ opacity:0; }
+  20%{ opacity:.9; }
+  60%{ opacity:.45; }
+  100%{ opacity:0; }
+}
+@keyframes scan{
+  0%{ transform: translateY(0); opacity:0; }
+  15%{ opacity:1; }
+  100%{ transform: translateY(520%); opacity:0; }
+}
+@keyframes flickerSoft{
+  0%{opacity:0}
+  10%{opacity:.12}
+  22%{opacity:.05}
+  35%{opacity:.14}
+  55%{opacity:.08}
+  100%{opacity:.10}
+}
+
+@keyframes neonStartup{
+  0%   { opacity:0;   transform:translate(-50%,-50%) scale(0.98); filter: brightness(.35) blur(3px); }
+  7%   { opacity:.35; }
+  11%  { opacity:.10; }
+  18%  { opacity:.85; }
+  23%  { opacity:.40; }
+  30%  { opacity:1;   filter: brightness(1.35) blur(0px); }
+  42%  { opacity:.78; filter: brightness(1.12); }
+  55%  { opacity:1;   filter: brightness(1.18); }
+  100% { opacity:.95; transform:translate(-50%,-50%) scale(1); filter: brightness(1.06); }
+}
+@keyframes glowLocal{
+  0%  { opacity:0; }
+  20% { opacity:.65; }
+  36% { opacity:.20; }
+  55% { opacity:.55; }
+  100%{ opacity:.32; }
+}
+@keyframes localNoise{
+  0%  { opacity:0;   transform: translateY(-6px); }
+  9%  { opacity:.45; }
+  15% { opacity:.12; }
+  24% { opacity:.58; }
+  38% { opacity:.18; }
+  65% { opacity:.30; transform: translateY(2px); }
+  100%{ opacity:.12; transform: translateY(0px); }
+}
+@keyframes reflectIn{
+  0%  { opacity:0; transform: translate(-50%,-50%) scale(0.98); }
+  30% { opacity:.28; }
+  55% { opacity:.12; }
+  100%{ opacity:.18; transform: translate(-50%,-50%) scale(1); }
+}
   </style>
 </head>
 
 <body>
+  <!-- ✅ FX Cinéma (ajout) -->
+  <div class="cyber-fx"></div>
+  <div class="neon-spot"></div>
+  <div class="neon-reflect"></div>
+
   <div class="wrap">
     <div class="top">
       <div class="badge">Portfolio IT • Braga / Portugal</div>
@@ -281,6 +498,18 @@ h1{
 
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
+
+    // ✅ petit flash néon court sur la zone laptop (cinéma)
+    const spot = document.querySelector(".neon-spot");
+    if (spot){
+      setTimeout(() => {
+        spot.style.opacity = "1";
+        spot.style.filter = "brightness(2.2) blur(1px)";
+        setTimeout(() => {
+          spot.style.filter = "";
+        }, 80);
+      }, 120);
+    }
   </script>
 </body>
 </html>
