--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
 }
 
 *{box-sizing:border-box}
+html,body{height:100%}
 
+/* ✅ IMAGE NETTE + fond plein écran */
 body{
   margin:0;
   font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial;
   color:var(--txt);
 
-  /* ✅ PHOTO EN FOND */
   background: url("bg-cyber.png") no-repeat center center fixed;
   background-size: cover;
 
@@ -37,50 +38,35 @@ body{
   overflow-x:hidden;
 }
 
-/* ✅ Overlay sombre + teinte néon pour lisibilité */
-body::before{
-  content:"";
-  position:fixed;
-  inset:0;
-  z-index:-2;
-  pointer-events:none;
-  background:
-    linear-gradient(rgba(6,8,21,.84), rgba(9,15,42,.90)),
-    radial-gradient(circle at 20% 20%, rgba(124,58,237,.16), transparent 55%),
-    radial-gradient(circle at 80% 30%, rgba(6,182,212,.12), transparent 55%);
-}
-
-/* ✅ Glow global (respiration) */
+/* ✅ Glow cyberpunk discret (pas de voile sombre) */
 body::after{
   content:"";
   position:fixed;
-  inset:-30px;
-  z-index:-1;
+  inset:-40px;
   pointer-events:none;
-  opacity:.10;
+  z-index:0;
+  opacity:.22;
   background:
-    radial-gradient(circle at 70% 52%, rgba(34,211,238,.24), transparent 58%),
-    radial-gradient(circle at 35% 40%, rgba(124,58,237,.18), transparent 60%);
+    radial-gradient(circle at 18% 18%, rgba(124,58,237,.22), transparent 55%),
+    radial-gradient(circle at 82% 22%, rgba(6,182,212,.18), transparent 58%),
+    radial-gradient(circle at 70% 75%, rgba(34,211,238,.10), transparent 62%);
   filter: blur(18px);
-  animation: glowPulse 3.6s ease-in-out infinite;
+  mix-blend-mode: screen;
+  animation: glowPulse 4.2s ease-in-out infinite;
 }
 
 @keyframes glowPulse{
-  0%{ opacity:.06; transform:scale(1); }
-  50%{ opacity:.18; transform:scale(1.02); }
-  100%{ opacity:.08; transform:scale(1); }
+  0%{ opacity:.16; transform:scale(1); }
+  50%{ opacity:.26; transform:scale(1.01); }
+  100%{ opacity:.18; transform:scale(1); }
 }
 
-.wrap{max-width:1050px;margin:0 auto;padding:40px 20px 80px}
-
-/* ✅ Révélation du contenu après “allumage néon” */
 .wrap{
-  animation: contentReveal 1.2s ease 0.55s both;
-}
-
-@keyframes contentReveal{
-  from{ opacity:0; transform: translateY(10px); filter: blur(2px); }
-  to  { opacity:1; transform: translateY(0); filter: blur(0); }
+  max-width:1050px;
+  margin:0 auto;
+  padding:40px 20px 80px;
+  position:relative;
+  z-index:2; /* ✅ au-dessus du glow + néon */
 }
 
 .top{
@@ -95,6 +81,7 @@ body::after{
   background:rgba(255,255,255,.06);
   border:1px solid var(--border);
   font-size:13px;
+  backdrop-filter: blur(10px);
 }
 
 .lang-switch{
@@ -110,6 +97,7 @@ body::after{
   font-size:13px;
   transition:.2s;
   user-select:none;
+  backdrop-filter: blur(10px);
 }
 
 .lang-btn:hover{
@@ -123,6 +111,7 @@ h1{
   background:linear-gradient(90deg,var(--accent1),var(--accent2));
   -webkit-background-clip:text;
   -webkit-text-fill-color:transparent;
+  text-shadow: 0 0 22px rgba(34,211,238,.10);
 }
 
 .subtitle{
@@ -149,6 +138,8 @@ h1{
   display:inline-flex;
   align-items:center;
   gap:8px;
+  background: rgba(0,0,0,.18);
+  backdrop-filter: blur(10px);
 }
 
 .btn.primary{
@@ -189,7 +180,6 @@ h1{
 .card:hover{
   border-color:var(--neon);
   transform:translateY(-3px);
-  /* ✅ glow plus “cinéma” */
   box-shadow:
     0 0 0 3px rgba(34,211,238,.10),
     0 18px 60px rgba(0,0,0,.45);
@@ -221,193 +211,113 @@ h1{
   color:var(--muted);
 }
 
+/* ====== NEON LAPTOP OVERLAY (dessin + flicker) ====== */
+.neon-laptop{
+  position:fixed;
+  /* 👉 ajuste si besoin pour tomber pile sur le mur */
+  left: 67%;
+  top: 52%;
+  transform: translate(-50%, -50%);
+  width: min(780px, 92vw);
+  aspect-ratio: 900 / 520;
+  pointer-events:none;
+  z-index:1; /* devant le fond, derrière le contenu */
+  opacity: 0;
+  filter: drop-shadow(0 0 14px rgba(34,211,238,.45));
+  animation: neonAppear .2s ease .35s forwards;
+}
+
+@keyframes neonAppear{ to{ opacity:1; } }
+
+.neon-svg{ width:100%; height:100%; }
+
+.neon-line{
+  fill: transparent;
+  stroke-width: 10;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+
+  filter:
+    drop-shadow(0 0 10px rgba(34,211,238,.55))
+    drop-shadow(0 0 24px rgba(124,58,237,.20));
+
+  stroke-dasharray: 1400;
+  stroke-dashoffset: 1400;
+}
+
+.neon-a{ stroke: rgba(34,211,238,.95); }
+.neon-b{ stroke: rgba(124,58,237,.90); }
+.neon-c{ stroke: rgba(34,211,238,.85); }
+
+.neon-a{
+  animation: draw 0.9s ease 0.45s forwards, flicker 2.8s ease 1.35s infinite;
+}
+.neon-b{
+  animation: draw 0.8s ease 0.62s forwards, flicker 3.2s ease 1.45s infinite;
+}
+.neon-c{
+  animation: draw 0.7s ease 0.78s forwards, flicker 2.6s ease 1.55s infinite;
+}
+
+@keyframes draw{
+  to{ stroke-dashoffset: 0; }
+}
+
+@keyframes flicker{
+  0%, 100% { opacity: 1; filter: brightness(1.15); }
+  3%  { opacity: .35; filter: brightness(.75); }
+  6%  { opacity: 1; }
+  10% { opacity: .55; filter: brightness(.85); }
+  14% { opacity: 1; }
+  22% { opacity: .78; }
+  28% { opacity: 1; }
+  72% { opacity: .92; }
+}
+
 @media(max-width:760px){
   .card{grid-column:span 12;}
   h1{font-size:32px;}
-}
-
-/* =========================
-   🔥 FX CINÉMA (GLOBAL + LOCAL)
-   - flicker / scan / spot laptop / reflet
-========================= */
-
-.cyber-fx{
-  position:fixed;
-  inset:0;
-  pointer-events:none;
-  z-index:999;
-  opacity:0;
-  animation: fxIn 1.6s ease forwards;
-}
-
-/* scanline global */
-.cyber-fx::before{
-  content:"";
-  position:absolute;
-  left:-10%;
-  right:-10%;
-  top:-30%;
-  height:28%;
-  background: linear-gradient(
-    to bottom,
-    transparent,
-    rgba(34,211,238,.18),
-    rgba(34,211,238,.05),
-    transparent
-  );
-  filter: blur(2px);
-  animation: scan 1.7s ease .20s 1;
-}
-
-/* grain global */
-.cyber-fx::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  background:
-    repeating-linear-gradient(
-      to bottom,
-      rgba(255,255,255,.04) 0px,
-      rgba(255,255,255,.04) 1px,
-      transparent 2px,
-      transparent 7px
-    );
-  opacity:.10;
-  mix-blend-mode: overlay;
-  animation: flickerSoft 1.6s ease .05s 1;
-}
-
-/* Spot local sur la zone laptop (centre-droit) */
-.neon-spot{
-  position:fixed;
-  width: 720px;
-  height: 440px;
-
-  /* ✅ Ajustable si besoin */
-  left: 66%;
-  top: 42%;
-
-  transform: translate(-50%, -50%);
-  pointer-events:none;
-  z-index:5;
-  opacity:0;
-  animation: neonStartup 1.9s ease forwards;
-}
-
-.neon-spot::before{
-  content:"";
-  position:absolute;
-  inset:-50px;
-  border-radius: 34px;
-  background:
-    radial-gradient(circle at 55% 55%, rgba(34,211,238,.38), transparent 55%),
-    radial-gradient(circle at 40% 40%, rgba(124,58,237,.25), transparent 62%);
-  filter: blur(18px);
-  opacity:0;
-  animation: glowLocal 2.4s ease forwards;
-}
-
-/* bruit + scanlines local */
-.neon-spot::after{
-  content:"";
-  position:absolute;
-  inset:0;
-  border-radius: 24px;
-  background:
-    repeating-linear-gradient(
-      to bottom,
-      rgba(255,255,255,.10) 0px,
-      rgba(255,255,255,.10) 1px,
-      transparent 2px,
-      transparent 7px
-    );
-  mix-blend-mode: screen;
-  opacity:0;
-  animation: localNoise 1.9s ease forwards;
-}
-
-/* reflet au sol sous le laptop */
-.neon-reflect{
-  position:fixed;
-  width: 900px;
-  height: 320px;
-
-  left: 66%;
-  top: 72%;
-
-  transform: translate(-50%, -50%);
-  pointer-events:none;
-  z-index:4;
-  opacity:0;
-  background:
-    radial-gradient(ellipse at 50% 30%, rgba(34,211,238,.22), transparent 60%),
-    radial-gradient(ellipse at 35% 40%, rgba(124,58,237,.14), transparent 70%);
-  filter: blur(22px);
-  animation: reflectIn 2.2s ease .15s forwards;
-}
-
-/* animations */
-@keyframes fxIn{
-  0%{ opacity:0; }
-  20%{ opacity:.9; }
-  60%{ opacity:.45; }
-  100%{ opacity:0; }
-}
-@keyframes scan{
-  0%{ transform: translateY(0); opacity:0; }
-  15%{ opacity:1; }
-  100%{ transform: translateY(520%); opacity:0; }
-}
-@keyframes flickerSoft{
-  0%{opacity:0}
-  10%{opacity:.12}
-  22%{opacity:.05}
-  35%{opacity:.14}
-  55%{opacity:.08}
-  100%{opacity:.10}
-}
-
-@keyframes neonStartup{
-  0%   { opacity:0;   transform:translate(-50%,-50%) scale(0.98); filter: brightness(.35) blur(3px); }
-  7%   { opacity:.35; }
-  11%  { opacity:.10; }
-  18%  { opacity:.85; }
-  23%  { opacity:.40; }
-  30%  { opacity:1;   filter: brightness(1.35) blur(0px); }
-  42%  { opacity:.78; filter: brightness(1.12); }
-  55%  { opacity:1;   filter: brightness(1.18); }
-  100% { opacity:.95; transform:translate(-50%,-50%) scale(1); filter: brightness(1.06); }
-}
-@keyframes glowLocal{
-  0%  { opacity:0; }
-  20% { opacity:.65; }
-  36% { opacity:.20; }
-  55% { opacity:.55; }
-  100%{ opacity:.32; }
-}
-@keyframes localNoise{
-  0%  { opacity:0;   transform: translateY(-6px); }
-  9%  { opacity:.45; }
-  15% { opacity:.12; }
-  24% { opacity:.58; }
-  38% { opacity:.18; }
-  65% { opacity:.30; transform: translateY(2px); }
-  100%{ opacity:.12; transform: translateY(0px); }
-}
-@keyframes reflectIn{
-  0%  { opacity:0; transform: translate(-50%,-50%) scale(0.98); }
-  30% { opacity:.28; }
-  55% { opacity:.12; }
-  100%{ opacity:.18; transform: translate(-50%,-50%) scale(1); }
+  .neon-laptop{
+    left: 50%;
+    top: 58%;
+    width: min(640px, 94vw);
+  }
 }
   </style>
 </head>
 
 <body>
-  <!-- ✅ FX Cinéma (ajout) -->
-  <div class="cyber-fx"></div>
-  <div class="neon-spot"></div>
-  <div class="neon-reflect"></div>
+
+  <!-- ✅ NEON laptop qui s'allume (overlay) -->
+  <div class="neon-laptop" aria-hidden="true">
+    <svg viewBox="0 0 900 520" class="neon-svg">
+      <!-- contour laptop -->
+      <path class="neon-line neon-a"
+        d="M230 320
+           Q235 280 270 270
+           H565
+           Q605 272 610 320
+           V380
+           H230
+           Z" />
+      <!-- base -->
+      <path class="neon-line neon-b"
+        d="M190 390
+           H650
+           Q690 392 700 420
+           H140
+           Q150 392 190 390
+           Z" />
+      <!-- bouclier -->
+      <path class="neon-line neon-c"
+        d="M575 285
+           Q620 295 640 320
+           Q625 360 600 375
+           Q575 360 560 320
+           Q565 300 575 285
+           Z" />
+    </svg>
+  </div>
 
   <div class="wrap">
     <div class="top">
@@ -498,18 +408,6 @@ h1{
 
   <script>
     document.getElementById("y").textContent = new Date().getFullYear();
-
-    // ✅ petit flash néon court sur la zone laptop (cinéma)
-    const spot = document.querySelector(".neon-spot");
-    if (spot){
-      setTimeout(() => {
-        spot.style.opacity = "1";
-        spot.style.filter = "brightness(2.2) blur(1px)";
-        setTimeout(() => {
-          spot.style.filter = "";
-        }, 80);
-      }, 120);
-    }
   </script>
 </body>
 </html>
