--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   --muted: rgba(255,255,255,.68);
   --accent1:#7c3aed;
   --accent2:#06b6d4;
-  --neon:#3ddcff;
+  --neon:#22d3ee;
   --border: rgba(255,255,255,.15);
 }
 
@@ -52,7 +52,7 @@ body::after{
   background:
     radial-gradient(circle at 18% 18%, rgba(124,58,237,.18), transparent 55%),
     radial-gradient(circle at 82% 22%, rgba(6,182,212,.16), transparent 58%),
-    radial-gradient(circle at 70% 75%, rgba(61,220,255,.10), transparent 62%);
+    radial-gradient(circle at 70% 75%, rgba(34,211,238,.10), transparent 62%);
   filter: blur(18px);
   mix-blend-mode: screen;
   animation: glowPulse 4.2s ease-in-out infinite;
@@ -69,7 +69,7 @@ body::after{
   margin:0 auto;
   padding:40px 20px 80px;
   position:relative;
-  z-index:2; /* au-dessus du néon */
+  z-index:2; /* au-dessus du glow */
 }
 
 .top{
@@ -110,7 +110,7 @@ body::after{
   color:#000;
 }
 
-/* HERO plus propre (texte moins “moche”) */
+/* HERO plus propre */
 .hero{
   margin-top:26px;
   max-width:820px;
@@ -196,9 +196,9 @@ h1{
 }
 
 .card:hover{
-  border-color: rgba(61,220,255,.55);
+  border-color: rgba(34,211,238,.55);
   transform:translateY(-3px);
-  box-shadow: 0 0 0 3px rgba(61,220,255,.10), 0 18px 60px rgba(0,0,0,.45);
+  box-shadow: 0 0 0 3px rgba(34,211,238,.10), 0 18px 60px rgba(0,0,0,.45);
 }
 
 .card h3{
@@ -210,7 +210,6 @@ h1{
   gap:10px;
 }
 
-/* icônes fines */
 .card h3 i{
   font-size:16px;
   opacity:.9;
@@ -226,137 +225,15 @@ ul{ margin:0; padding-left:18px; color:var(--muted); }
   color:var(--muted);
 }
 
-/* ===== NEON OUTLINE (TON CONTOUR ROUGE => BLEU) ===== */
-.neon-outline{
-  position: fixed;
-  inset: 0;
-  pointer-events: none;
-  z-index: 1; /* devant l'image, derrière le contenu */
-  opacity: 1;
-}
-
-/* Placement sur le mur (ajuste si besoin) */
-.neon-outline-svg{
-  position: absolute;
-  width: min(980px, 92vw);
-  left: 63%;
-  top: 56%;
-  transform: translate(-50%, -50%);
-  mix-blend-mode: screen;
-}
-
-/* Trait néon BLEU + allumage + flicker */
-.neon-stroke{
-  fill: none;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 12;
-
-  /* 🔵 Bleu néon */
-  stroke: #3ddcff;
-
-  filter:
-    drop-shadow(0 0 4px rgba(61,220,255,.8))
-    drop-shadow(0 0 12px rgba(61,220,255,.7))
-    drop-shadow(0 0 24px rgba(61,220,255,.6))
-    drop-shadow(0 0 40px rgba(61,220,255,.4));
-
-  opacity: 0;
-
-  animation: neonStart 1s ease forwards,
-             neonFlicker 3s linear infinite,
-             neonPulse 4s ease-in-out infinite;
-}
-
-/* Petites variations de timing */
-.s1{ animation-delay: .20s, 1.1s, 1.1s; }
-.s2{ animation-delay: .35s, 1.2s, 1.2s; }
-.s3{ animation-delay: .55s, 1.25s, 1.25s; stroke-width: 9; opacity:.85; }
-.s4{ animation-delay: .45s, 1.15s, 1.15s; }
-.s5{ animation-delay: .60s, 1.28s, 1.28s; stroke-width: 10; opacity:.9; }
-
-@keyframes neonStart{
-  0%   { opacity:0; filter: brightness(.4); }
-  40%  { opacity:.4; }
-  60%  { opacity:.2; }   /* petit faux démarrage */
-  75%  { opacity:.8; }
-  100% { opacity:1; filter: brightness(1.3); }
-}
-
-@keyframes neonFlicker{
-  0%,100% { opacity:1; }
-  5%  { opacity:.4; }
-  8%  { opacity:1; }
-  12% { opacity:.6; }
-  15% { opacity:1; }
-  50% { opacity:.95; }
-  52% { opacity:1; }
-  85% { opacity:.9; }
-}
-
-@keyframes neonPulse{
-  0%,100% { filter: brightness(1.15); }
-  50%     { filter: brightness(1.35); }
-}
-
 @media(max-width:760px){
   .card{grid-column:span 12;}
   h1{font-size:32px;}
   .hero{padding:18px;}
-  .neon-outline-svg{
-    left: 50%;
-    top: 60%;
-    width: min(860px, 96vw);
-  }
 }
   </style>
 </head>
 
 <body>
-
-  <!-- ✅ NEON contour (laptop + bouclier) qui s'allume en bleu -->
-  <div class="neon-outline" aria-hidden="true">
-    <svg class="neon-outline-svg" viewBox="0 0 1000 600">
-      <!-- Contour écran -->
-      <path class="neon-stroke s1"
-        d="M120 330
-           L120 210
-           Q120 190 140 190
-           L560 190
-           Q585 190 595 210
-           L595 330" />
-
-      <!-- Base -->
-      <path class="neon-stroke s2"
-        d="M85 330
-           L635 330
-           L705 430
-           Q715 445 700 445
-           L20 445
-           Q5 445 15 430
-           L85 330" />
-
-      <!-- Ligne déco base -->
-      <path class="neon-stroke s3" d="M160 385 L560 385" />
-
-      <!-- Bouclier extérieur -->
-      <path class="neon-stroke s4"
-        d="M760 145
-           Q835 155 875 205
-           Q870 290 800 330
-           Q730 290 725 205
-           Q760 155 760 145 Z" />
-
-      <!-- Bouclier intérieur -->
-      <path class="neon-stroke s5"
-        d="M760 175
-           Q815 185 845 215
-           Q840 270 800 295
-           Q760 270 755 215
-           Q775 190 760 175 Z" />
-    </svg>
-  </div>
-
   <div class="wrap">
     <div class="top">
       <div class="badge">Portfolio IT • Braga / Portugal</div>
